--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.11.16",
+    "node-mailjet": "^3.3.1",
     "nodemon": "^2.0.7"
   }
 }
